<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    android:background="@drawable/nurtree_bg"
    android:padding="20dp">
    <!--使用线性布局-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--Logo-->

        <ImageView
            android:id="@+id/LogoImage"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/logo"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="195dp"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:background="#fefefe">

                <EditText
                    android:id="@+id/register_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/translucent_edit"
                    android:ems="10"
                    android:hint="@string/phone_hint"
                    android:inputType="textPersonName"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/register_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/translucent_edit"
                    android:ems="10"
                    android:hint="@string/code_hint"
                    android:inputType="textPassword"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/register_child_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/translucent_edit"
                    android:ems="10"
                    android:hint="@string/child_account_hint"
                    android:inputType="textPersonName"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/register_child_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/translucent_edit"
                    android:ems="10"
                    android:hint="@string/child_password_hint"
                    android:inputType="textPassword"
                    android:minHeight="48dp" />
            </LinearLayout>


            <TextView
                android:id="@+id/btn_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="right"
                android:text="@string/button_back_name" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:text="@string/button_register_name" />

            <TextView
                android:id="@+id/tvRC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>