<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    android:background="@drawable/nurtree_bg"
    android:padding="20dp">
    <!--使用线性布局-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--Logo-->
        <ImageView
            android:id="@+id/LogoImage"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/logo"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:orientation="horizontal">
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="vertical"
                android:background="#fefefe"
                >
                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:background="@drawable/translucent_edit"
                    android:hint="@string/phone_hint"
                    android:inputType="textPersonName"
                    android:minHeight="48dp" />
                <EditText
                    android:id="@+id/pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:background="@drawable/translucent_edit"
                    android:hint="@string/code_hint"
                    android:inputType="textPassword"
                    android:minHeight="48dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="vertical">
            </LinearLayout>

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_login_name"
                tools:ignore="MissingConstraints,OnClick"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/button_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:layout_gravity="left"
                    android:gravity="left"
                    android:textColor="#4682B4"
                    android:text="@string/button_register_name" />

<!--                <TextView-->
<!--                    android:id="@+id/button_reset_password"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="right"-->
<!--                    android:gravity="right"-->
<!--                    android:layout_margin="5dp"-->
<!--                    android:layout_weight="1"-->
<!--                    android:rotationY="4"-->
<!--                    android:text="@string/button_reset_password_name"-->
<!--                    android:textColor="#4682B4" />-->
            </LinearLayout>

            <TextView
                android:id="@+id/tvRC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>