<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:padding="10dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/purple_500"
        app:cardElevation="0dp"
        >
        <TextView
            android:id="@+id/questionNameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_gravity="center"/>
    </androidx.cardview.widget.CardView>


    <RadioGroup
        android:id="@+id/optionsRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- RadioButtons will be added dynamically -->
    </RadioGroup>

    <LinearLayout
        android:id="@+id/question_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp"
            android:layout_marginTop="15dp"
            android:background="@color/gray_20">
            <TextView
                android:text="@string/questionAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginLeft="5dp"
                android:textColor="@color/black_80"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/answerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/blue_60"
                android:layout_gravity="center"/>
            <TextView
                android:text="@string/questionSelectedAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginLeft="15dp"
                android:textColor="@color/black_40"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/selectedAnswerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp"
            android:layout_marginTop="10dp"
            android:background="@color/gray_20">
            <TextView
                android:text="@string/questionNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginLeft="5dp"
                android:textColor="@color/black_80"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/noteTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/blue_60"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>