<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/scroll_view"
            android:overScrollMode="never"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_marginTop="60dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="7dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="2dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cursor_blue"
                    android:textSize="10sp"/>
                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginLeft="5dp"
                    android:textSize="12sp"
                    android:text="@string/exam_name"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="8dp"
                        android:layout_height="wrap_content"
                        android:text="*"
                        android:textSize="12sp"
                        android:textColor="@color/red"/>
                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:text="@string/exam_name"/>
                    <TextView
                        android:id="@+id/et_correct_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:inputType="none"
                        android:textCursorDrawable="@drawable/input_cursor_black"
                        android:textSize="12dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="#1A000000"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="8dp"
                        android:layout_height="wrap_content"
                        android:text="*"
                        android:textSize="12sp"
                        android:textColor="@color/red"/>
                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:text="@string/exam_ques_num"/>
                    <TextView
                        android:id="@+id/et_error_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:inputType="none"
                        android:textCursorDrawable="@drawable/input_cursor_black"
                        android:textSize="12dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="#1A000000"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="8dp"
                        android:layout_height="wrap_content"
                        android:text="*"
                        android:textSize="12sp"
                        android:textColor="@color/red"/>
                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:text="@string/bonus_minutes"/>
                    <EditText
                        android:id="@+id/et_bonus_minutes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:textCursorDrawable="@drawable/input_cursor_black"
                        android:textSize="12dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="#1A000000"/>
            </LinearLayout>


        </LinearLayout>


        <!-- 顶部透明View -->
        <RelativeLayout
            android:id="@+id/top_view"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:background="@color/white"> <!-- 初始透明 -->
            <!-- 文本：居中 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exam_setting_title"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_centerInParent="true" />
            <TextView
                android:id="@+id/exam_setting_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit_text"
                android:textSize="14sp"
                android:textColor="@color/blue"
                android:scaleType="centerCrop"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="12dp" />
        </RelativeLayout>


    </FrameLayout>

</LinearLayout>